@@ -57,6 +57,10 @@ The default comunication protocol is RMI. Appending the argument -socket, the ga
 ```
 java -jar <name_of_the_jar>.jar -rmi
 ```
+#### Running the client when JavaFX modules are not found
+```
+java --module-path <path_to_javafx_folder/javafx-sdk-21.0.3/lib> --add-modules javafx.controls,javafx.fxml -Dprism.order=sw -Dprism.verbose=true -Djava.awt.headless=false --add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED -jar <name_of_the_jar>.jar
+```
 
 ### Running the Server
 To start the server run the command:
